# mlops-blueberry-counting

./: .gitignore  Makefile  POST_PROCESSING.md  README.md  RESULTS.md  pyproject.toml
experiments/: blueberry_embeddings.yaml  blueberry_embeddings_sweep.yaml  blueberry_line_detectors.yaml  blueberry_line_v9c.yaml  blueberry_line_yolo26.yaml  blueberry_line_yolov11.yaml  blueberry_line_yolov9s_aug.yaml  blueberry_tiled.yaml  blueberry_tiled_detectors.yaml  blueberry_tiled_v9c.yaml  blueberry_tiled_yolo26.yaml  blueberry_tiled_yolov11.yaml  blueberry_tiled_yolov9s_aug.yaml  blueberry_tiled_yolov9s_conf.yaml  blueberry_v8m.yaml  blueberry_v8m_v2.yaml  blueberry_v9c.yaml  example.yaml
ops/: __main__.py  bootstrap.py  config.py  count.py  dataset.py  evaluate.py  groundtruth.py  plot.py
ops/runtimes/: local.py  modal.py
ops/strategies/: __init__.py  embeddings.py  line_crossing.py  tiled_crossing.py
